--- a/content/plugin/sdkv2/testing/acceptance-tests/index.mdx
+++ b/content/plugin/sdkv2/testing/acceptance-tests/index.mdx
@@ -120,7 +120,7 @@ The Makefile configuration lets developers to use the following command to run a
 make testacc
 ```
 
-### Running Tests with GitHub Actions
+### GitHub Actions Workflow
 
 If using [GitHub](https://github.com/), run acceptance testing via [GitHub Actions](https://github.com/features/actions). Other continuous integration runners, while not exhaustively documented, are also supported.
 
