Update tfc-agent changelog

--- a/content/cloud-docs/agents/changelog.mdx
+++ b/content/cloud-docs/agents/changelog.mdx
@@ -16,6 +16,12 @@ within each release are categorized into one or more of the following labels:
 Each version below corresponds to a release artifact available for download on
 the official [releases website](https://releases.hashicorp.com/tfc-agent/).
 
+## 1.1.1 (03/09/2022)
+
+IMPROVEMENTS:
+
+* Added redacted HTTP logs in debug log mode (#123)
+
 ## 1.1.0 (02/23/2022)
 
 FEATURES:
