--- a/content/cloud-docs/workspaces/variables/managing-variables.mdx
+++ b/content/cloud-docs/workspaces/variables/managing-variables.mdx
@@ -9,17 +9,20 @@ description: >-
 
 You can set variables specifically for each workspace or you can create variable sets to reuse the same variables across multiple workspaces. Refer to the [variables overview](/cloud-docs/workspaces/variables) documentation for more information about variable types, scope, and precedence. You can also set variable values specifically for each run on the command line.
 
-~> **Note:** Variable sets are in beta.
-
-You must have [`read variables` permission](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) to view the variables for a particular workspace and to view the variable sets in your organization.
-
-To create new variable sets and apply them to workspaces, you must be part of a team with [manage workspaces](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To create and edit workspace-specific variables within a workspace, you must have [read and write variables](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) for that workspace.
-
-Once you have the proper [read and write variables permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions), you can create and edit workspace-specific variables through:
+You can create and edit workspace-specific variables through:
 
 - The Terraform Cloud UI, as detailed below.
 - The Variables API for [workspace-specific variables](/cloud-docs/api-docs/workspace-variables) and [variable sets](/cloud-docs/api-docs/variable-sets).
 - The `tfe` provider's [`tfe_variable`](https://registry.terraform.io/providers/hashicorp/tfe/latest/docs/resources/variable) resource, which can be more convenient for bulk management.
+
+~> **Note:** Variable sets are in beta.
+
+## Permissions
+You must have [`read variables` permission](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) to view the variables for a particular workspace and to view the variable sets in your organization.
+
+To create new variable sets and apply them to workspaces, you must be part of a team with [manage workspaces](/cloud-docs/users-teams-organizations/permissions#organization-owners) permissions. To create and edit workspace-specific variables within a workspace, you must have [read and write variables](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) for that workspace.
+
+
 
 ## Run-Specific Variables
 
