--- a/content/cloud-docs/registry/publish-modules.mdx
+++ b/content/cloud-docs/registry/publish-modules.mdx
@@ -85,6 +85,8 @@ Refer to [Preparing a Module Repository](#preparing-a-module-repository) for det
 
 ## Deleting Versions and Modules
 
+-> **Note:** Deleting a tag from your VCS repository will not automatically remove the version from the private registry.
+
 You can delete individual versions of a module or the entire module. If deleting a module version would leave a module with no versions, Terraform Cloud will remove the entire module. To delete a module or version:
 
 1. Navigate to the module's details page.
