Add 'download' link in sample response for uploaded configuration versions

--- a/content/cloud-docs/api-docs/configuration-versions.mdx
+++ b/content/cloud-docs/api-docs/configuration-versions.mdx
@@ -118,7 +118,8 @@ curl \
         }
       },
       "links": {
-        "self": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7"
+        "self": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7",
+        "download": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7/download"
       }
     }
   ]
@@ -171,7 +172,8 @@ curl \
       }
     },
     "links": {
-      "self": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7"
+      "self": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7",
+      "download": "/api/v2/configuration-versions/cv-ntv3HbhJqvFzamy7/download"
     }
   }
 }
