Add API documentation for configuration version download (#2177)
* Add API documentation for configuration version download

* Add version note for TFE

* Add 'download' link in sample response for uploaded configuration versions

--- a/content/cloud-docs/api-docs/changelog.mdx
+++ b/content/cloud-docs/api-docs/changelog.mdx
@@ -15,6 +15,9 @@ page_id: api-changelog
 
 Keep track of changes to the API for Terraform Cloud and Terraform Enterprise.
 
+### 2022-03-14
+* Added the [Download Configuration Files](/cloud-docs/api-docs/configuration-versions#download-configuration-files) endpoints
+
 ### 2022-03-11
 
 * Introduced [Archiving Configuration Versions](/cloud-docs/workspaces/configurations#archiving-configuration-versions).
