--- a/content/enterprise/install/automated/active-active.mdx
+++ b/content/enterprise/install/automated/active-active.mdx
@@ -13,7 +13,7 @@ However, the benefits that come with the Active/Active architecture need to be w
 * Hard requirement of a completely automated installation
 * Observability concerns when monitoring multiple instances
 * Custom automation required to manage the lifecycle of application nodes
-* [New CLI-based commands](/enterprise/admin/infrastructure/admin) vs Replicated Admin Console for administration
+* [CLI-based commands](/enterprise/admin/infrastructure/admin) for administration instead of the Replicated Admin Console
 
 -> **Note**: Please contact your Customer Success Manager before attempting to follow this guide. They will be able to walk you through the process to make it as seamless as possible.
 
@@ -188,7 +188,7 @@ Which will output something similar to the following:
 
 Installation is complete once `isTransitioning` is `false` and `State` is `started`.
 
-See [Admin Administration](/enterprise/admin/infrastructure/admin) for more status and troubleshooting commands.
+See [Admin CLI Commands](/enterprise/admin/infrastructure/admin) for more status and troubleshooting commands.
 
 #### Validate Application
 
