--- a/content/enterprise/releases/2022/v202201-1.mdx
+++ b/content/enterprise/releases/2022/v202201-1.mdx
@@ -25,7 +25,7 @@ APPLICATION LEVEL FEATURES:
 1. Container resource usage metrics are now available in Prometheus format.
 1. The private registry UI now displays a warning message for old versions of provider documentation with a link to the latest version. It also includes an **On this Page** outline for provider documentation that lets you navigate more quickly between sections. 
 1. Added an outline to the public provider documentation page
-1. The [new `tfe-admin rotate-encryption-password` command](https://www.terraform.io/enterprise/admin/infrastructure/admin) rotates the encryption password on active/active installations of Terraform Enterprise.
+1. The [new `tfe-admin rotate-encryption-password` command](https://www.terraform.io/enterprise/admin/infrastructure/admin-cli) rotates the encryption password on Active/Active installations of Terraform Enterprise.
 1. A workspace's ID can now be copied from the workspace overview page.
 1. New speculative attribute has been added to the [Configuration Versions API](https://www.terraform.io/cloud-docs/api-docs/configuration-versions) response.
 1. Add new option to allow teams that aren't the owner team to manage modules in the private registry.
