Update permissions.mdx (#2190)
* Update permissions.mdx

* Update content/cloud-docs/users-teams-organizations/permissions.mdx

Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

Co-authored-by: Jarrod N <jarrod.nettleton@hashicorp.com>
Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -93,6 +93,8 @@ Workspace admins have the following permissions on their workspace:
 
 - Apply runs
 - Lock and unlock workspace
+
+  -> **Note**: Typically, only the user who created the lock can unlock a workspace. Administrators and members of the Owners team can use [Force unlock](/docs/cloud/workspaces/settings.html#locking) to override this and unlock a workspace.
 - Download Sentinel mocks
 - Read and write variables
 - Read and write state versions
